k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: flask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: flask
          image: ghcr.io/juarru/devops11a-project-app:main
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
