k8s/kibana-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:8.11.1
          ports:
            - containerPort: 5601
