k8s/elasticsearch-service.yml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: flask
spec:
  selector:
    app: elasticsearch
  clusterIP: None
  ports:
    - protocol: TCP
      port: 9200
      targetPort: 9200
