k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: flask
spec:
  type: NodePort
  selector:
    app: flask
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
